[tool.poetry]
name = "react_agent"
version = "0.1.0"
description = "A new Python project"
authors = ["Your Name <your.email@example.com>"]
license = "NONE"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
